Связал задания с пользователями, исправил ошибки, рефакторил код, добавил новую миграцию
